content/terraform-enterprise/1.0.x/docs/enterprise/integrations/kubernetes/annotations-and-labels.mdx
---
page_title: Terraform Enterprise Operator for Kubernetes annotations and labels
description: >-
  Use annotations and labels with the Terraform Enterprise Operator for
  Kubernetes to manage Terraform runs.
source: terraform-docs-common
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-08-11T21:14:21-07:00
last_modified: 2025-08-11T21:14:21-07:00
# END AUTO GENERATED METADATA
---

# HCP Terraform Operator for Kubernetes annotations and labels

This topic contains reference information about the annotations and labels the HCP Terraform and Terraform Enterprise operators use for Kubernetes.

## Annotations

| Annotation key                                     | Target resources | Possible values             | Description                                                                                                                                                                                                          |
| -------------------------------------------------- | ---------------- | --------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `workspace.app.terraform.io/run-new`               | Workspace        | `"true"`                    | Set this annotation to `"true"` to trigger a new run. Example: `kubectl annotate workspace <WORKSPACE-NAME> workspace.app.terraform.io/run-new="true"`.                                                              |
| `workspace.app.terraform.io/run-type`              | Workspace        | `plan`, `apply`, `refresh`  | Specifies the run type. Changing this annotation does not start a new run. Refer to [Run Modes and Options](/terraform/enterprise/run/modes-and-options) for more information. Defaults to `"plan"`.                 |
| `workspace.app.terraform.io/run-terraform-version` | Workspace        | Any valid Terraform version | Specifies the Terraform version to use. Changing this annotation does not start a new run. Only valid when the annotation `workspace.app.terraform.io/run-type` is set to `plan`. Defaults to the Workspace version. |

## Labels

| Label key                              | Target resources | Possible values          | Description                                                                                 |
| -------------------------------------- | ---------------- | ------------------------ | ------------------------------------------------------------------------------------------- |
| `agentpool.app.terraform.io/pool-name` | Pod[Agent]       | Any valid AgentPool name | Associate the resource with a specific agent pool by specifying the name of the agent pool. |
| `agentpool.app.terraform.io/pool-id`   | Pod[Agent]       | Any valid AgentPool ID   | Associate the resource with a specific agent pool by specifying the ID of the agent pool.   |
